# veiculo_control_streamlit

./: .env.example  .gitignore  LICENSE  README.md  app.py  database.py  database_sqlite.py  gerenciar_condutores.py  pyproject.toml  redis_client.py  render.yaml  requirements.txt  utils.py
.streamlit/: config.toml
auth/: login.py
data/: veiculos.db
pages/: admin.py  cadastro_condutores.py  cadastro_veiculos.py  dashboard.py  gerar_relatorio.py  gerenciar_condutores.py  gerenciar_veiculos.py  home.py  listar_usuarios.py  registrar_entrada.py  registrar_retorno.py  registrar_saida.py
utils/: auth.py  backup.py  checklist.py  common.py  constants.py  database.py  db.py  logger.py  pdf_generator.py  reports.py  schema.py  security.py  validators.py
