[tool.poetry]
name = "vehicle-control"
version = "0.1.0"
description = "Sistema de Gestão de Veículos"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "*"
Pillow = "*"
pandas = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 